[gd_scene load_steps=36 format=2]

[ext_resource path="res://Sprites/Map_Parts/MP-43-POW_Outside.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Map_Parts/MP-43-POW_Inside.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Map_Parts/MP-43-POW.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 20, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 40, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 60, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 20, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 40, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 60, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 20, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 40, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 60, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 20, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 40, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 60, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 20, 20 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 20, 100, 20, 20 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 40, 100, 20, 20 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 60, 100, 20, 20 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "0",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "1",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "2",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "3",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "4",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "5",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 20, 17 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 20, 15 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 20, 13 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 20, 10 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 20, 7 )

[sub_resource type="CapsuleShape2D" id=32]
radius = 3.0
height = 44.0

[node name="MP-42-POW" type="StaticBody2D" groups=["hittable", "map"]]
collision_layer = 393740
collision_mask = 983564
script = ExtResource( 3 )
respawn_time = 5.0

[node name="Sprite_Back" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 0.0196078, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 7

[node name="Anim_Sprite_Outside" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 25 )
animation = "0"

[node name="Shape_00" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 26 )
disabled = true

[node name="Shape_01" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3 )
shape = SubResource( 27 )
disabled = true

[node name="Shape_02" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -5 )
shape = SubResource( 31 )
disabled = true

[node name="Shape_03" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 28 )
disabled = true

[node name="Shape_04" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -10 )
shape = SubResource( 29 )
disabled = true

[node name="Shape_05" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -13 )
shape = SubResource( 30 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 20 )
rotation = 1.5708
shape = SubResource( 32 )

[node name="Hit_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Respawn_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Hit_Timer" to="." method="_on_Hit_Timer_timeout"]
[connection signal="timeout" from="Respawn_Timer" to="." method="_on_Respawn_Timer_timeout"]
